# aegis

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  Makefile  README.md  TASKS.md  index.html  mkdocs.yml  objects.inv  opencode.json  pyproject.toml  sitemap.xml  tasks.md
.github/workflows/: ci.yml  docs.yml  release.yml
.playground/lovelaice-probe/: FINDINGS.md  inproc_repro.py  interrupt_probe.py  mcp_http_repro.py  mcp_live_probe.py  probe.py  stream_resume_probe.py  usage_probe.py
api/: index.html
architecture/: index.html
budget/: index.html
canvas/: index.html
commands/: index.html
configuration/: index.html
docs/: api.md  architecture.md  budget.md  canvas.md  commands.md  configuration.md  drivers.md  groups.md  index.md  install.md  mcp.md  plugins.md  queues.md  remote.md  roadmap.md  telegram.md  terminals.md  usage.md  workflows.md
docs/stylesheets/: aegis.css
docs/superpowers/plans/: 2026-05-18-aegis-mcp-plane-slice1.html  2026-05-18-aegis-mcp-plane-slice2.html  2026-05-18-aegis-multitab.html  2026-05-18-aegis-phase1-cli.md  2026-05-18-aegis-status-metrics.md  2026-05-18-aegis-theming-ink.html  2026-05-18-aegis-tui.md  2026-05-18-aegis-v0.1-release.html  2026-05-19-aegis-telegram-interface.html  2026-05-20-aegis-task-queue-v1.html  2026-05-20-aegis-workflow-scaffold-v1.md  2026-05-21-aegis-queue-dashboard-v1.md  2026-05-21-live-terminals-v1.md  2026-05-21-session-persistence-v1.md  2026-05-22-workflow-catalog-v1.md  2026-05-25-aegis-agent-groups.md  2026-05-25-aegis-per-queue-budgets-plan.md  2026-05-25-aegis-remote-callbacks-schedule-control-plan.md  2026-05-25-aegis-remote-plane-plan.md  2026-05-25-aegis-scheduler.md  2026-05-26-aegis-file-indexer.md  2026-05-26-aegis-file-viewer.md  2026-05-26-aegis-telegram-renderer-correctness.md  2026-05-26-aegis-telegram-substrate-commands-plan.md  2026-05-27-aegis-claude-repl-driver-v1.md  2026-05-27-aegis-config-surface-v1.md  2026-05-27-aegis-fs-tool-surface-v1.md  2026-05-27-mcp-config-edit.md  2026-05-28-aegis-driver-visibility-slice1.md  2026-05-28-aegis-plugin-substrate-v1.md  2026-05-28-aegis-session-history.md  2026-05-30-aegis-memory-plugin-v1.md  2026-06-02-aegis-tui-transcript-windowing.md  2026-06-30-aegis-web-client-s1-foundation.md  2026-06-30-aegis-web-client-s2a-backend.md  2026-06-30-aegis-web-client-s2b-browser.md  (+27 more)
drivers/: index.html
examples/: __init__.py  hello_command.py  tdd_step.py
groups/: index.html
install/: index.html
know-how/: deploying-web.md  native-lovelaice-agent.md  releasing.md  remote-tui.md
legacy/: server.py
legacy/tests/: test_server.py  test_step.py
mcp/: index.html
notes/: aegis-codebase.md  aegis-onboard-2026.md  joke-programmers-dark-mode.md  meaning-of-life.md  project-state-2026.md
overrides/: home.html
plugins/: index.html
plugins/memory-system/: _install.py  _uninstall.py  memory_system.py  plugin.toml
plugins/skill-system/: _install.py  plugin.toml  skill_system.py
plugins/socks-proxy/: _install.py  _uninstall.py  plugin.toml  socks_proxy.py
queues/: index.html
remote/: index.html
roadmap/: index.html
scripts/: aegis-serve.service  capture_fixtures.sh  refresh-models.py
search/: search_index.json
src/aegis/: __init__.py  cli.py  cli_budget.py  cli_config.py  cli_models.py  cli_plugin.py  cli_schedule.py  cli_usage.py  config.py  demo.py  events.py  init_wizard.py  render.py  render_html.py  render_shared.py  repl.py  server.py  theme_names.py  transcript_constants.py  version.py
src/aegis/budget/: __init__.py  (+6 more)
stylesheets/: aegis.css
telegram/: index.html
terminals/: index.html
tests/: __init__.py  conftest.py  conftest_workflows.py  test_acp_pre_spawn.py  test_agent_plan.py  test_app_bridge_interrupt.py  test_attempt.py  test_background_mount_hidden.py  test_budget_config.py  test_budget_cost.py  test_budget_evaluator.py  test_budget_prices.py  test_budget_windows.py  test_builtin_enqueue.py  test_builtin_prompt.py  test_canvas_manager.py  test_canvas_mcp.py  test_canvas_notify.py  test_canvas_parser.py  test_claude_interrupt.py  test_claude_pre_spawn.py  test_claude_pump.py  test_claude_resume_argv.py  test_cli.py  test_cli_budget.py  test_cli_clean_flag.py  test_cli_config.py  test_cli_corrupt_workspace.py  test_cli_schedule.py  test_cli_schedule_remote.py  test_command_args.py  test_command_complete.py  test_command_decorator.py  test_command_expand.py  test_command_fuzzy.py  test_command_registry.py  test_config.py  test_config_edit.py  test_config_panel.py  test_config_providers.py  (+278 more)
tests/cli/: test_remote_flag.py
tests/fixtures/: fake_groups_env.py  stream_text.jsonl  stream_tool.jsonl  two_serves.py
tests/live/: test_remote_tui_live.py
tests/remote/: test_ssh_tunnel.py
tests/tui/: conftest.py  test_remote_manager.py  test_remote_manager_i1_i2.py  test_remote_manager_parity.py  test_remote_pane_hydration.py  test_remote_quit.py  test_remote_status_banner.py  test_ws_client_auth.py  test_ws_client_reconnect.py  test_ws_client_streams.py
tests/web/: coalesce.test.mjs  markdown.test.mjs  queues.test.mjs  renderEvent.test.mjs  tabs.test.mjs  ws_connection.test.mjs  ws_getevent.test.mjs
usage/: index.html
workflows/: index.html
(+255 files in other folders)
