[project]
name = "aegis"
version = "0.2.0"
description = "A meta-harness for coding agents — drives Claude Code in a multi-agent terminal UI."
readme = "README.md"
authors = [
    { name = "Alejandro Piad", email = "apiad@apiad.net" }
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Environment :: Console",
    "Topic :: Software Development",
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.28",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "textual>=8.2.6",
    "typer>=0.24.1",
]

[project.scripts]
aegis = "aegis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
norecursedirs = ["legacy"]
markers = [
    "live: tests that spawn a real `claude` subprocess (auto-skip when not on PATH; deselect with `-m \"not live\"` for the hermetic suite)",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.29",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mcp>=1.0.0",
]
docs = ["mkdocs-material>=9.5"]
