[project]
name = "aegis-harness"
version = "0.15.0"
description = "A multi-agent meta-harness for coding agents — drives Claude Code, Gemini CLI, and OpenCode in one calm full-screen TUI."
readme = "README.md"
authors = [
    { name = "Alejandro Piad", email = "apiad@apiad.net" }
]
license = { text = "MIT" }
keywords = [
    "ai", "agents", "claude", "gemini", "opencode", "harness",
    "tui", "textual", "acp", "mcp",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.13"
dependencies = [
    "agent-client-protocol>=0.10",
    "croniter>=2.0",
    "fastmcp>=3.2.0",
    "httpx>=0.28",
    "markdown-it-py>=3.0",
    "ptyprocess>=0.7.0",
    "pydantic>=2.12.5",
    "rich>=14.3.3",
    "ruamel.yaml>=0.18",
    "starlette>=0.46",
    "textual[syntax]>=8.2.6",
    "tomli-w>=1.2.0",
    "typer>=0.24.1",
    "uvicorn>=0.32",
    "watchdog>=4.0",
]

[project.urls]
Homepage      = "https://apiad.github.io/aegis/"
Documentation = "https://apiad.github.io/aegis/"
Repository    = "https://github.com/apiad/aegis"
Issues        = "https://github.com/apiad/aegis/issues"
Changelog     = "https://github.com/apiad/aegis/blob/main/CHANGELOG.md"

[project.scripts]
aegis = "aegis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[tool.hatch.build.targets.sdist]
include = [
    "src/aegis",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: tests that spawn a real `claude` subprocess (auto-skip when not on PATH; deselect with `-m \"not live\"` for the hermetic suite)",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.29",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mcp>=1.0.0",
    "pytest-httpx>=0.36.2",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
]
